--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
+# Mandatory
+
 COLLECTION_SLUG=
 CONTRACT_ADDRESS=
 OPENSEA_API_KEY=
 X2Y2_API_KEY=
 ETHERSCAN_API_KEY=
+
+# Optional
+
 TWITTER_API_KEY=
 TWITTER_API_SECRET=
 TWITTER_ACCESS_TOKEN=
